[gd_scene load_steps=7 format=3 uid="uid://ko2v4gamkde5"]

[ext_resource type="Theme" uid="uid://ltg03tu30kkp" path="res://UI.tres" id="1_q57dv"]
[ext_resource type="Script" uid="uid://cwgw7jjpx0lvl" path="res://Powers/Power Template/power_template.gd" id="2_psq3l"]
[ext_resource type="Shader" uid="uid://cgyggtax4vves" path="res://Powers/Power Template/power_template.gdshader" id="3_igxvr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_20e17"]
shader = ExtResource("3_igxvr")
shader_parameter/hue_shift = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psq3l"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_psq3l"]
size = Vector2(96, 96)

[node name="powerTemplate" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -100.0
offset_top = -196.0
offset_right = 100.0
offset_bottom = 196.0
theme = ExtResource("1_q57dv")
script = ExtResource("2_psq3l")

[node name="TextureRect" type="Panel" parent="."]
material = SubResource("ShaderMaterial_20e17")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q57dv")
theme_override_styles/panel = SubResource("StyleBoxFlat_psq3l")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q57dv")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_q57dv")
alignment = 1

[node name="spacer1" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_q57dv")

[node name="icon" type="TextureRect" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_q57dv")
texture = SubResource("PlaceholderTexture2D_psq3l")

[node name="spacer2" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_q57dv")

[node name="powerName" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q57dv")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
text = "Power name"
fit_content = true
horizontal_alignment = 1

[node name="spacer3" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_q57dv")

[node name="powerDesc" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_q57dv")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "sdgdbjghfkjhganxhfiudgsmacfkhcskjhfkdgshaghfgajkhfagkkjfhagjfgagiudh,fukxaermguegahrhzfkugmrkfxagrgmxiu,gzmgyakerhmzfure,agiuzkm"
fit_content = true
horizontal_alignment = 1

[node name="spacer4" type="Control" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_q57dv")

[node name="levelNum" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1 Stack"
fit_content = true
horizontal_alignment = 1
